fix(ui): increase z-index for layer data source dropdowns, which were appearing below pinned panels (#595)

--- a/src/ui/layer_data_sources_tab.css
+++ b/src/ui/layer_data_sources_tab.css
@@ -25,6 +25,7 @@
   flex-direction: column;
   flex: 1;
   height: 0px;
+  z-index: 1;
 }
 
 .neuroglancer-layer-data-source-url-input input.autocomplete-input {
